# ytscribe

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.claude/: .gitignore
.claude/scripts/: context-monitor.py
.codex/: .gitattributes  .gitignore
.opencode/plugin/: superpowers.js
dev/: README.md
dev/active/phase-3-implementation/: phase-3-context.md  phase-3-plan.md
dev/archive/phase-3-implementation/: phase-3-tasks.md
docs/: project-plan.md
docs/Elevenlabs/: async-stt-webhook.md  quickstart.md  speech-to-text.md  stt-quickstart.md
docs/plans/: 2025-12-29-logging-reliability-design.md
docs/research/: uv-getting-started.md  uv-scripts.md  uv.md  yt-dlp.md
src/ytscribe/: __init__.py  cli.py  config.py  downloader.py  transcriber.py
