[project]
name = "ytscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Müller", email = "202548807+LLMinem@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "elevenlabs>=2.22.0",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
    "yt-dlp>=2025.10.22",
]

[project.scripts]
ytscribe = "ytscribe:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
